# stars

./: .gitignore  AGENTS.md  README.md  SCRATCHPAD.md  TODO.md  all_starred_repos.jsonl  batch_results.json  complete_desktop_apps_catalog.csv  current_batch.jsonl  float_project_state.txt  justfile  pom.xml  process_all.py  process_batch.py  process_catalog.py  process_current_batch.py  process_repos.py  process_results.py  process_thorough.py  results.json  results_batch_0.json  results_batch_1.json  results_batch_2.json  results_batch_3.json  results_batch_4.json  thorough_results.json
.github/workflows/: build.yml
.opencode/: opencode.json
backend/: .env  .gitignore  Cargo.toml  api_fix_conclusions.md  debug_network.sh  deploy_pueue.sh  new_list.csv  statui.toml
backend/src/: db.rs  github.rs  main.rs  models.rs
backend/tests/: api_tests.rs
desktop/: pom.xml
desktop-mockup/: .factorypath  README.md
desktop/src/main/resources/: log4j2.xml  (+1 more)
docs/: deployment.md
frontend/client/: .factorypath  pom.xml
frontend/web-mockup/v0-desktop-appstore-mockup/: package.json
frontend/web-mockup/v0-javafx-port/: .factorypath  anthropic-claude-design.jsx  compile-errors.txt  pom.xml
src/main/java/: module-info.java
src/main/resources/: sample.fxml  style.css
web-mockup/: README.md  index.html  justfile  pnpm-lock.yaml  remaining_work.md  tsconfig.tsbuildinfo
web-mockup/app/: layout.tsx  page.tsx
web-mockup/components/: app-card.tsx  header.tsx  installation-indicator.tsx  sidebar.tsx
web-mockup/components/ui/: button.tsx
web-mockup/lib/: mock-data.ts
(+78 files in other folders)
