[package]
name = "backend-service"
version = "0.1.0"
edition = "2021"
default-run = "backend-service"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "stream"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "chrono"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
polars = { version = "0.52.0", features = ["csv"] }
regex = "1.10"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
regex = "1.10"
